about me mobile version added

--- a/_index.css
+++ b/_index.css
@@ -23,5 +23,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+h2{
+  font-size: inherit;
+  font-weight: inherit;
+}
+p{
+  font-size: inherit;
+  font-weight: inherit;
+}
 
