--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -10,23 +10,26 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    padding-top: 20%;
 }
 
 .landingPage-root .astroBoy{
     height: 40%;
+    margin-top: 20%;
+    margin-bottom: 20%;
+
 }
 
 .landingPage-root .landingPage-content .landingPage-copy{
-    padding-top: 20%;
-    font-size: 14px;
+    font-size: 24px;
     text-align:left;
+    font-weight: 700;
+    text-align: justify;
 }
 
-.landingPage-root .landingPage-content .landingPage-copy b{
+b{
     color: var(--mainColor);
 }
 
-.landingPage-CTA{
+.landingPage-CTA button{ 
     margin-top: 16%;
 }
