--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -8,8 +8,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: start;
+    align-items:center;
     height: 100%;
+    position: relative;
 }
 
 b{
@@ -33,6 +34,8 @@ b{
 .aboutMe-root .aboutMe-content h2{
     font-size: 24px;
     font-weight: 700;
+    text-align: justify;
+    margin-right: auto;
 }
 .aboutMe-root .aboutMe-content .copyIsClose{
     font-size: 16px;
