about me mobile fixed 3

--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -24,11 +24,10 @@ b{
 .aboutMe-root .aboutMe-content .aboutMe-copy{
     position: relative;
     height:fit-content;
-
 }
 
 .aboutMe-root .aboutMe-content img{
-    height: 40%;
+    height: 250px;
     margin-top: 20%;
     margin-bottom: 20%;
 }
