--- a/routes/AboutMe/_aboutMe.css
+++ b/routes/AboutMe/_aboutMe.css
@@ -19,6 +19,7 @@ b{
 }
 .aboutMe-root .aboutMe-content .ab-div{
     height:fit-content;
+    width: 100%;
 }
 
 .aboutMe-root .aboutMe-content .aboutMe-copy{
@@ -35,7 +36,7 @@ b{
 .aboutMe-root .aboutMe-content h2{
     font-size: 24px;
     font-weight: 700;
-    text-align: justify;
+    text-align: left;
     margin-right: auto;
 }
 .aboutMe-root .aboutMe-content .copyIsClose{
@@ -63,4 +64,6 @@ b{
 .aboutMe-CTA button{
     margin-top: 16%;
     margin-bottom: 40%;
+    display: flex;
+    margin-left: auto;
 }
