routes for projects page fixed and demo card component done

--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -56,9 +56,9 @@ b{
 
 .display-projects{
     display: flex;
+    flex-direction: column;
     width: 100%;
     justify-content: center;
     align-items: center;
     margin-top: 10%;
-
 }
