--- a/_index.css
+++ b/_index.css
@@ -3,7 +3,7 @@
   color-scheme: light dark;
   color: var(--textMainColor);
   --textMainColor: #fff;
-  --textSecColor:#ffffffb1;
+  --textSecColor:hsla(106deg, 0%, 73%, 1);
   --secColor: #242424;
   --mainColor: hsl(266deg, 100%, 60%);
 
