--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -38,20 +38,23 @@
     background-color: var(--textMainColor);
     color: var(--mainColor);
 }
-
-
 .card-body{
     display: flex;
-    height: 150px;
+    flex-direction: column;
+    min-height: 150px;
     width: 100%;
     justify-content: center;
     align-items: center;
     background-color: var(--secColor);
     overflow: hidden;
+    padding: 20px;
     box-sizing: border-box;
-    padding: 10px;
+    text-align: justify;
 }
 .card-body img{
-    height: 100%;
-    
+    max-height:200px;
+}   
+.card-body p{
+    margin-bottom: 20px;
 }
+
