--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -47,6 +47,7 @@ b{
     margin-top: 16%;
     margin-left: auto;
     display: flex;
+    margin-bottom: 20%;
 }
 .contact-form{
     margin-top: 10%;
