--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -43,7 +43,7 @@ b{
 .contact-btn-form{
     width: 100%;
 }
-.contact-btn-form button{
+.Contact-CTA button{
     margin-top: 16%;
     margin-left: auto;
     display: flex;
