--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -48,7 +48,7 @@ b{
     width: 100%;
 }
 
-.projects-btn-form button{
+.Projects-CTA button{
     margin-top: 16%;
     margin-left: auto;
     display: flex;
