--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -6,6 +6,10 @@ h3{
 h2{
     font-size: 24px;
 }
+p{
+    text-align: left;
+    font-size: 16px;
+}
 
 .card-root-open{
     width: 100%;
@@ -118,6 +122,6 @@ h2{
     padding: 0px 20px;
     box-sizing: border-box;
     text-align: justify;
-    transition: all .6s ease-in-out;
+    transition: all .4s ease;
     z-index: -999;
 }
