email sender firebase funtion working, in AUTH email was replaced with USER and card component z-index disabled

--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -71,7 +71,7 @@ p{
     box-sizing: border-box;
     text-align: justify;
     transition: all .3s ease-in-out;
-    z-index: -999;
+    /* z-index: -999; */
 
 
 }
