--- a/components/InputForm/_inputForm.css
+++ b/components/InputForm/_inputForm.css
@@ -25,14 +25,18 @@
 .form-body .email-input-box{
     height: 40px;
     width: 100%;
-    text-align: start;
+    text-align: left;
     font-size: 16px;
     padding: 10px 10px;
     box-sizing: border-box;
+    border-radius: 4px;
+    border: none;
 }
 
 .email-input-box:focus{
-    border: 2px solid var(--mainColor);
+    border: 1px solid var(--mainColor);
+    border-radius: 4px;
+
 }
 
 .form-body .message-input-box{
@@ -45,8 +49,12 @@
     border-radius: 4px;
     font-family: var(--mainFont);
     resize: none;
+    border: none;
+
 }
 .message-input-box:focus{
-    border: 2px solid var(--mainColor);
+    border: 1px solid var(--mainColor);
+    border-radius: 4px;
+
 }
 
