--- a/components/InputForm/_inputForm.css
+++ b/components/InputForm/_inputForm.css
@@ -31,12 +31,13 @@
     box-sizing: border-box;
     border-radius: 4px;
     border: none;
+    font-family: var(--mainFont);
 }
 
 .email-input-box:focus{
     border: 1px solid var(--mainColor);
     border-radius: 4px;
-
+    font-family: var(--mainFont);
 }
 
 .form-body .message-input-box{
@@ -55,6 +56,6 @@
 .message-input-box:focus{
     border: 1px solid var(--mainColor);
     border-radius: 4px;
-
+    font-family: var(--mainFont);
 }
 
