--- a/components/Buttons/_button.css
+++ b/components/Buttons/_button.css
@@ -21,7 +21,7 @@
     padding: 12px 20px;
     border-radius: 12px;
     font-size: 16px;
-    background: none;
+    background: var(--secColor);
 } 
 
 .secButton:hover{
