--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -24,7 +24,12 @@ img{
     margin: 0;
 
 }
+ul{
+    text-align: left;
+    width: 90%;
+    padding-left: 20px;
 
+}
 .card-root-open{
     width: 100%;
     height: fit-content;
