--- a/routes/Contact/_contact.css
+++ b/routes/Contact/_contact.css
@@ -2,6 +2,12 @@ b{
     color: var(--mainColor);
     font-weight: inherit;
 }
+
+h3{
+    font-size: 20px;
+    text-align: center;
+    font-weight: 700;
+}
 .contact-root{
     height: auto;
     width: 80%;
