--- a/routes/Projects/_projects.css
+++ b/routes/Projects/_projects.css
@@ -3,6 +3,12 @@ b{
     font-weight: inherit;
 }
 
+.projects-display-features h3{
+    font-size: 20px;
+    text-align: left;
+    font-weight: 700;
+}
+
 .projects-root{
     height: auto;
     width: 80%;
@@ -64,7 +70,8 @@ b{
     margin-top: 20%;
 }
 
-/* ------------------------------------------------------------------ Shopping cart styles ----------------------------------------------------------------*/
+/* ------------------------------------------------------------------ Projects card styles for img ----------------------------------------------------------------*/
+
 
 .projects-full-screen-img-open span{
     width: 20%;
@@ -108,3 +115,5 @@ b{
 .projects-full-screen-img-close div{
     display: none;
 }
+
+
