--- a/components/DemoCard/_demoCard.css
+++ b/components/DemoCard/_demoCard.css
@@ -28,7 +28,6 @@ ul{
     text-align: left;
     width: 90%;
     padding-left: 20px;
-
 }
 
 span{
@@ -43,7 +42,7 @@ span{
     justify-content: center;
     align-items: center;
     border: 1px solid var(--mainColor);
-    border-radius: 9px;
+    border-radius: 12px;
     position: relative;
     overflow: hidden;
     margin: 5px 0px;
@@ -108,7 +107,7 @@ span{
     justify-content: center;
     align-items: center;
     border: 1px solid var(--mainColor);
-    border-radius: 9px;
+    border-radius: 12px;
     position: relative;
     overflow: hidden;
     margin: 5px 0px;
@@ -143,4 +142,79 @@ span{
     box-sizing: border-box;
     transition: all .4s ease;
     gap: 20px;
+}
+
+
+
+
+/* --------------------------------------------------------------------- Tablet media query -----------------------------------------------------------------------*/
+
+
+
+@media (min-width: 600px){
+
+    h2{
+        font-size: 34px;
+       
+    }
+   
+    p{
+      
+        font-size: 26px;
+       
+    }
+ 
+    ul{
+        font-size: 26px;
+        padding-left: 30px;
+    }
+    
+    .card-root-open{
+       
+        border: 2px solid var(--mainColor);
+        border-radius: 22px;
+        margin: 10px 0px;
+   
+    }
+    
+    .card-title{
+        
+        height: 70px;
+        padding: 0px 30px;
+        font-size: 34px;
+    }
+    .card-root-open .card-title button{
+        height: 40px;
+        width: 40px;
+
+    }
+    .card-root-open .card-body{
+      
+        max-height: 600px;
+        padding: 30px 0px;
+        gap: 25px;
+    }
+ 
+    
+    /*  ----------------------------------- CLOSED  ------------------------------------ */
+    
+    .card-root-close{
+      
+        border: 2px solid var(--mainColor);
+        border-radius: 22px;
+        margin: 10px 0px;
+       
+    }
+    
+    .card-root-close .card-title button{
+        height: 40px;
+        width: 40px;
+       
+    
+    }
+    .card-root-close .card-body{
+     
+        gap: 25px;
+    }
+
 }
